--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,97 @@
-/* You can add global styles to this file, and also import other style files */
+$primary: #5A1D1B
+$display3: 16px
+
+$serifont: 'Times New Roman', Times, serif
+$app-font: Arial, Helvetica, sans-serif
+
+body
+    margin: 0
+    padding: 0
+    width: 100%
+    height: 100%
+    min-height: 20rem
+.logo
+    display: flex
+    flex-direction: column
+    align-items: center
+
+.logo-img
+    max-width: 45%
+    width: 45%
+    min-width: 20%
+
+.logo-text
+    font-family: $serifont
+    font-size: 40px
+
+.logo-sub-column
+    display: flex
+    flex-direction: column
+    align-items: center
+
+.logo-sub-row
+    position: absolute
+    display: flex
+    flex-direction: row
+    align-items: center
+
+.logo-sub-row-1
+    position: relative
+    margin: 1.2rem 0
+    display: flex
+    flex-direction: row
+    align-items: center
+
+.logo-sub
+    p
+        font-size: 14px
+
+.logo-sub
+    p
+        strong
+            font-size: 18px
+
+.app-btn
+    margin: 1rem 0
+    display: flex
+    align-items: center
+    justify-content: center
+    padding: 10px 0
+    width: 100%
+    min-width: 15rem
+    border-radius: 5px
+    background: $primary
+    color: #fff
+    font-size: $display3
+    font-family: $app-font
+    text-decoration-line: none
+    transition: 0.3s
+    &:hover
+        scale: 1.05
+
+.app-form
+    max-width: 20vw
+    min-width: 20%
+    display: flex
+    flex-direction: column
+    align-items: center
+
+.app-label
+    margin: 5px 0
+    width: 100%
+    min-width: 15rem
+    display: flex
+    flex-direction: row
+    justify-items: start
+
+.app-form-input
+    height: 1.8rem
+    border-radius: 2px
+    width: 97%
+    min-width: 15rem
+    border: solid 0.05px $primary
+    outline: solid 0.05px $primary
+
+.t-small
+    font-size: 11px
+    font-family: $app-font
