--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -7,7 +7,7 @@
         <div class="logo-sub-column">
             <div class="logo-sub-row">
                 <p><strong>I</strong>GREJA &nbsp;</p>
-                <p><strong>B</strong>ATISTA &nbsp;</p>  
+                <p><strong>B</strong>ATISTA &nbsp;</p>
             </div>
             <div class="logo-sub-row-1">
                 <p><strong>N</strong>ACIONAL EM &nbsp;</p>
@@ -28,6 +28,8 @@
         <a class="recovery-act t-small sub-action" href>Esqueci minha senha</a>
 
         <button class="app-btn" (click)="onSubmit()">Entrar</button>
+
+        <a routerLink="/home" routerLinkActive="active"></a>
 
         <a class="create-act sub-action" href>Criar Conta</a>
 
